reformat: modernize